[gd_scene load_steps=6 format=3 uid="uid://dkvw1gfhendya"]

[ext_resource type="Script" path="res://TitleScreen/title_screen.gd" id="1_ct7k0"]
[ext_resource type="FontFile" uid="uid://by3aevm1ucjhc" path="res://Fonts/sd_auto_pilot.ttf" id="1_k6jlg"]
[ext_resource type="Texture2D" uid="uid://bybktrw3uwqqh" path="res://TitleScreen/hand.png" id="3_n4hh6"]
[ext_resource type="Texture2D" uid="uid://bols05xhjlv23" path="res://TitleScreen/Puddle.png" id="4_32jgg"]
[ext_resource type="AudioStream" uid="uid://b5bxkjoi4dsum" path="res://Music/TitleTheme.mp3" id="5_ug5pn"]

[node name="Title Screen" type="Node2D"]
script = ExtResource("1_ct7k0")

[node name="BG" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="Title" type="RichTextLabel" parent="."]
offset_left = 10.0
offset_top = 314.0
offset_right = 238.0
offset_bottom = 354.0
rotation = -9.91643e-05
scale = Vector2(3, 4)
pivot_offset = Vector2(-9, 87)
theme_override_fonts/normal_font = ExtResource("1_k6jlg")
theme_override_font_sizes/normal_font_size = 60
text = "SEVERED"

[node name="Node" type="Node2D" parent="."]
position = Vector2(0, 400)

[node name="Select1" type="RichTextLabel" parent="Node"]
texture_filter = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -64.5
offset_right = 100.0
offset_bottom = 64.5
grow_vertical = 2
rotation = -9.91643e-05
scale = Vector2(3, 3)
pivot_offset = Vector2(-34.7001, 60.0724)
theme_override_fonts/normal_font = ExtResource("1_k6jlg")
theme_override_font_sizes/normal_font_size = 35
text = "Play

	Options

Quit"

[node name="Play" type="Button" parent="Node/Select1"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 0.0044632
offset_top = 3.00347
offset_right = 41.0045
offset_bottom = 21.0035

[node name="Options" type="Button" parent="Node/Select1"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 10.9998
offset_top = 50.0046
offset_right = 85.9998
offset_bottom = 65.0046

[node name="Quit" type="Button" parent="Node/Select1"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 0.995243
offset_top = 96.0036
offset_right = 41.9952
offset_bottom = 110.004

[node name="Select2" type="RichTextLabel" parent="Node"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -66.0
offset_right = 104.001
offset_bottom = 66.0
grow_vertical = 2
rotation = 3.14159
scale = Vector2(3, 3)
pivot_offset = Vector2(-38, 60)
theme_override_fonts/normal_font = ExtResource("1_k6jlg")
theme_override_font_sizes/normal_font_size = 35
text = "Versus

	Train

Back"

[node name="Versus" type="Button" parent="Node/Select2"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -2.0
offset_top = 3.0
offset_right = 62.0
offset_bottom = 23.0

[node name="Train" type="Button" parent="Node/Select2"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 12.0
offset_top = 50.0
offset_right = 63.0
offset_bottom = 68.0

[node name="Back" type="Button" parent="Node/Select2"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -3.0
offset_top = 96.0
offset_right = 36.0
offset_bottom = 115.0

[node name="Hand" type="Sprite2D" parent="."]
position = Vector2(-1.30768, 331.176)
rotation = 0.00120742
scale = Vector2(4, 4)
texture = ExtResource("3_n4hh6")
offset = Vector2(217.529, 28.9434)

[node name="Puddle" type="Sprite2D" parent="Hand"]
position = Vector2(0.331695, -1.66895)
rotation = -0.00120742
scale = Vector2(1.41667, 1.00417)
texture = ExtResource("4_32jgg")
offset = Vector2(162.112, 26.597)

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-35, 161)
rotation = -3.14159
stream = ExtResource("5_ug5pn")
autoplay = true

[node name="OptionsMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="Volume" type="HSlider" parent="OptionsMenu"]
layout_mode = 0
offset_left = 108.0
offset_top = 324.0
offset_right = 308.0
offset_bottom = 340.0
min_value = -25.0
max_value = 25.0

[node name="VolumeLabel" type="Label" parent="OptionsMenu/Volume"]
layout_mode = 0
offset_left = -2.0
offset_top = -52.0
offset_right = 189.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("1_k6jlg")
theme_override_font_sizes/font_size = 75
text = "VOLUME"

[node name="OptionsBack" type="Button" parent="OptionsMenu"]
layout_mode = 0
offset_left = 73.0
offset_top = 486.0
offset_right = 187.0
offset_bottom = 566.0
theme_override_fonts/font = ExtResource("1_k6jlg")
theme_override_font_sizes/font_size = 109
text = "BACK"

[connection signal="pressed" from="Node/Select1/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Node/Select1/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Node/Select1/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Node/Select2/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="OptionsMenu/OptionsBack" to="." method="_on_options_back_pressed"]
